// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TemplateManager > renders correctly when loading 1`] = `
<div>
  <div
    class="template-manager-loading"
  >
    <div
      class="w-6 h-6 border-2 border-primary/25 border-t-primary rounded-full animate-spin"
    />
    <span>
      template.loading
    </span>
  </div>
</div>
`;

exports[`TemplateManager > renders correctly with empty templates 1`] = `
<div>
  <div
    class="template-manager"
  >
    <div
      class="template-manager-header"
    >
      <h3
        class="template-manager-title"
      >
        template.title
      </h3>
      <button
        class="template-manager-btn template-manager-btn--primary"
      >
        <svg
          class="w-4 h-4"
          fill="none"
          stroke="currentColor"
          stroke-width="2"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 4.5v15m7.5-7.5h-15"
            stroke-linecap="round"
            stroke-linejoin="round"
          />
        </svg>
        template.new
      </button>
    </div>
    <div
      class="template-manager-filters"
    >
      <button
        class="template-manager-filter template-manager-filter--active"
      >
        template.allCategories
      </button>
    </div>
    <div
      class="template-manager-list"
    >
      <div
        class="template-manager-empty"
      >
        <svg
          class="w-12 h-12 text-muted-foreground/50"
          fill="none"
          stroke="currentColor"
          stroke-width="1"
          viewBox="0 0 24 24"
        >
          <path
            d="M19.5 14.25v-2.625a3.375 3.375 0 00-3.375-3.375h-1.5A1.125 1.125 0 0113.5 7.125v-1.5a3.375 3.375 0 00-3.375-3.375H8.25m0 12.75h7.5m-7.5 3H12M10.5 2.25H5.625c-.621 0-1.125.504-1.125 1.125v17.25c0 .621.504 1.125 1.125 1.125h12.75c.621 0 1.125-.504 1.125-1.125V11.25a9 9 0 00-9-9z"
            stroke-linecap="round"
            stroke-linejoin="round"
          />
        </svg>
        <p>
          template.noTemplates
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`TemplateManager > renders correctly with templates 1`] = `
<div>
  <div
    class="template-manager"
  >
    <div
      class="template-manager-header"
    >
      <h3
        class="template-manager-title"
      >
        template.title
      </h3>
      <button
        class="template-manager-btn template-manager-btn--primary"
      >
        <svg
          class="w-4 h-4"
          fill="none"
          stroke="currentColor"
          stroke-width="2"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 4.5v15m7.5-7.5h-15"
            stroke-linecap="round"
            stroke-linejoin="round"
          />
        </svg>
        template.new
      </button>
    </div>
    <div
      class="template-manager-filters"
    >
      <button
        class="template-manager-filter template-manager-filter--active"
      >
        template.allCategories
      </button>
      <button
        class="template-manager-filter "
      >
        general
      </button>
      <button
        class="template-manager-filter "
      >
        custom
      </button>
    </div>
    <div
      class="template-manager-list"
    >
      <div
        class="template-manager-item"
      >
        <div
          class="template-manager-item-info"
        >
          <h4
            class="template-manager-item-name"
          >
            Test Template 1
          </h4>
          <span
            class="template-manager-item-category"
          >
            general
          </span>
          <p
            class="template-manager-item-description"
          >
            Description 1
          </p>
        </div>
        <div
          class="template-manager-item-actions"
        >
          <button
            class="template-manager-item-btn"
            title="common.edit"
          >
            <svg
              class="w-4 h-4"
              fill="none"
              stroke="currentColor"
              stroke-width="2"
              viewBox="0 0 24 24"
            >
              <path
                d="M16.862 4.487l1.687-1.688a1.875 1.875 0 112.652 2.652L10.582 16.07a4.5 4.5 0 01-1.897 1.13L6 18l.8-2.685a4.5 4.5 0 011.13-1.897l8.932-8.931zm0 0L19.5 7.125M18 14v4.75A2.25 2.25 0 0115.75 21H5.25A2.25 2.25 0 013 18.75V8.25A2.25 2.25 0 015.25 6H10"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
          </button>
          <button
            class="template-manager-item-btn template-manager-item-btn--danger"
            title="common.delete"
          >
            <svg
              class="w-4 h-4"
              fill="none"
              stroke="currentColor"
              stroke-width="2"
              viewBox="0 0 24 24"
            >
              <path
                d="M14.74 9l-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 01-2.244 2.077H8.084a2.25 2.25 0 01-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 00-3.478-.397m-12.562 3.034a2.25 2.25 0 01-1.52-2.228m0 0a48.394 48.394 0 013.36-.379m12.562 3.034a2.25 2.25 0 011.52-2.228m0 0a48.394 48.394 0 013.36-.379m0 0a1.5 1.5 0 01-1.484-1.475v-.993a1.5 1.5 0 011.484-1.475"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        class="template-manager-item"
      >
        <div
          class="template-manager-item-info"
        >
          <h4
            class="template-manager-item-name"
          >
            Test Template 2
          </h4>
          <span
            class="template-manager-item-category"
          >
            custom
          </span>
          <p
            class="template-manager-item-description"
          >
            Description 2
          </p>
        </div>
        <div
          class="template-manager-item-actions"
        >
          <button
            class="template-manager-item-btn"
            title="common.edit"
          >
            <svg
              class="w-4 h-4"
              fill="none"
              stroke="currentColor"
              stroke-width="2"
              viewBox="0 0 24 24"
            >
              <path
                d="M16.862 4.487l1.687-1.688a1.875 1.875 0 112.652 2.652L10.582 16.07a4.5 4.5 0 01-1.897 1.13L6 18l.8-2.685a4.5 4.5 0 011.13-1.897l8.932-8.931zm0 0L19.5 7.125M18 14v4.75A2.25 2.25 0 0115.75 21H5.25A2.25 2.25 0 013 18.75V8.25A2.25 2.25 0 015.25 6H10"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
          </button>
          <button
            class="template-manager-item-btn template-manager-item-btn--danger"
            title="common.delete"
          >
            <svg
              class="w-4 h-4"
              fill="none"
              stroke="currentColor"
              stroke-width="2"
              viewBox="0 0 24 24"
            >
              <path
                d="M14.74 9l-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 01-2.244 2.077H8.084a2.25 2.25 0 01-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 00-3.478-.397m-12.562 3.034a2.25 2.25 0 01-1.52-2.228m0 0a48.394 48.394 0 013.36-.379m12.562 3.034a2.25 2.25 0 011.52-2.228m0 0a48.394 48.394 0 013.36-.379m0 0a1.5 1.5 0 01-1.484-1.475v-.993a1.5 1.5 0 011.484-1.475"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
